--- a/pages/lab12bai2.html
+++ b/pages/lab12bai2.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab12_Bai2</title>
-    <link rel="stylesheet" href="/css/lab12bai2.css">
+    <link rel="stylesheet" href="css/lab12bai2.css">
 </head>
 <body>
     <div class="boxcenter">
         <article>
            
-            <iframe src="/img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" name="main" frameborder="0"></iframe>
+            <iframe src="img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" name="main" frameborder="0"></iframe>
         </article>
         <aside>
-           <a href="/img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="/img/pic 1.jpg" alt=""></a>
-           <a href="/img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="/img/pic 2.jpg" alt=""></a>
-           <a href="/img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="/img/pic 3.jpg" alt=""></a>
+           <a href="img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="img/pic 1.jpg" alt=""></a>
+           <a href="img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="img/pic 2.jpg" alt=""></a>
+           <a href="img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="img/pic 3.jpg" alt=""></a>
 
         </aside>
     </div>
