--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>LAB 12</p>
                 <a href="pages/lab12bai1.html">LAB 12 bài 1</a>
                 <br>
-                <a href="/pages/lab12bai2.html">LAB 12 bài 2</a>
+                <a href="pages/lab12bai2.html">LAB 12 bài 2</a>
             </div>
         </div>
     </div>
