--- a/pages/lab12bai1.html
+++ b/pages/lab12bai1.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab12_Bai1</title>
-    <link rel="stylesheet" href="css/lab12bai1.css">
+    <link rel="stylesheet" href="/css/lab12bai1.css">
 </head>
 
 <body>
-    <audio src="music/やなぎなぎ標火 Lylic VideoTVアニメ最果てのパラディンEDテーマ.mp3" loop autoplay></audio>
+    <audio src="/music/やなぎなぎ標火 Lylic VideoTVアニメ最果てのパラディンEDテーマ.mp3" loop autoplay></audio>
     <div class="boxcenter">
         <div class="mb">
-            <img src="img/lab11pic1.png" alt="">
+            <img src="/img/lab11pic1.png" alt="">
             <p>
                 <a href="#">Vụ phát hiện thi thể nam sinh viên mất tích: Nạn nhân tự tử</a>
             </p>
@@ -25,7 +25,7 @@
         </div> <br> <br>
         <hr>
         <div class="mb">
-            <img src="img/lab11pic2.jpg" alt="">
+            <img src="/img/lab11pic2.jpg" alt="">
             <p>
                 <a href="#">Đề nghị trao danh hiệu cao quý cho 2 đơn vị công an 'đánh án' xuất sắc</a>
             </p>
@@ -37,7 +37,7 @@
         </div> <br> <br>
         <hr>
         <div class="mb">
-            <img src="img/lab11pic3.jpg" alt="">
+            <img src="/img/lab11pic3.jpg" alt="">
             <p>
                 <a href="#">Chạy thẳng đèn đỏ ở ngã ba không đường giao cắt: Người Sài Gòn thắc mắc sao bị CSGT phạt?</a>
             </p>
