--- a/pages/lab9bai1.html
+++ b/pages/lab9bai1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=di, initial-scale=1.0">
     <title>Lab9_Bai1</title>
-    <link rel="stylesheet" href="css/lab9bai1.css">
+    <link rel="stylesheet" href="/css/lab9bai1.css">
 </head>
 
 <body>
