--- a/pages/lab12bai2.html
+++ b/pages/lab12bai2.html
@@ -11,12 +11,12 @@
     <div class="boxcenter">
         <article>
            
-            <iframe src="/img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" name="main" frameborder="0"></iframe>
+            <iframe src="../img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" name="main" frameborder="0"></iframe>
         </article>
         <aside>
-           <a href="/img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="/img/pic 1.jpg" alt=""></a>
-           <a href="/img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="/img/pic 2.jpg" alt=""></a>
-           <a href="/img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="/img/pic 3.jpg" alt=""></a>
+           <a href="../img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="/img/pic 1.jpg" alt=""></a>
+           <a href="../img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="/img/pic 2.jpg" alt=""></a>
+           <a href="../img/Character Demo - -Xiao- Doombane- - Genshin Impact.mp4" target="main"><img src="/img/pic 3.jpg" alt=""></a>
 
         </aside>
     </div>
