--- a/pages/lab9bai2.html
+++ b/pages/lab9bai2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab9_Bai2</title>
-    <link rel="stylesheet" href="css/lab9bai2.css">
+    <link rel="stylesheet" href="../css/lab9bai2.css">
     </hea"checkbox"y>
     <div class="form">
         <label for="#">Họ và tên: </label> <br>
