--- a/pages/lab12bai2.html
+++ b/pages/lab12bai2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab12_Bai2</title>
-    <link rel="stylesheet" href="/css/lab12bai2.css">
+    <link rel="stylesheet" href="../css/lab12bai2.css">
 </head>
 <body>
     <div class="boxcenter">
